@@ -7,8 +7,13 @@ Things still needing to be done for the ALPHA release (on experimental livecd):
 	Backend:
 		Make sure partitioning somewhat works. (agaffney)
 		rewrite install_filesystem_tools()
+		add coldplug and hotplug when doing genkernel
+		setting services does not work.  none of them set.
+		DHCP client-controller side doesn't work.
 	DialogFE:
 		update partitioning stuff (agaffney) (sorry)
+		where does hostname get set?
+		setting gateway and DNS servers.
 	gtkFE:
 		custom kernel and kernel bootsplash options.
 		simple partitioning interface (MB and %)
