@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
 
+  14 Mar 2005; Preston Cody <codeman@gentoo.org>
+  added initial version of set gateway code.
+  
   18 Feb 2005; Preston Cody <codeman@gentoo.org>
   added progress bar for install
 
