@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.78 2005/03/07 08:52:10 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.79 2005/03/14 22:19:45 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
+  14 Mar 2005; Preston Cody <codeman@gentoo.org>
+  Small fix for setting the default gateway.  Also added feature to dialogfe.
+  
   7 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Switched spawn() over to commands.getstatusoutput() instead of fork/waitpid
 
